[package]
name = "stewart-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
env_logger = "0.11.3"
ethercrab = "0.4"
ethercrab-wire = "0.1.4"
ethercrab-wire-derive = "0.1.4"
float-cmp = "0.9.0"
log = "0.4.21"
signal-hook = "0.3.17"
tokio = { version = "1.36.0", features = ["time", "macros", "rt-multi-thread"] }
